[[bin]]
name = "some-delay"
path = "src/main.rs"

[package]
name = "some-delay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
cpal = "0.17"

# DSP and effects
dasp = { version = "0.11", features = ["signal", "interpolate"] }

# UI framework
# Use eframe/egui for the GUI
eframe = "0.23"
egui = "0.23"

# Windows API required by eframe
winapi = { version = "0.3", features = ["winuser", "windef"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
